--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.14.4)
 
+add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/part_00_sleep )
+
 add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/01_sort )
 add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/02_sort )
 add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/03_sort )
